--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        pro
+        <h2>Git demo</h2>
     </head>
     <body>
         <h2>This is my project and I'm using git through command prompt</h2>
